Version 3.1.0dev:

* Fixed mouse integration.
* Only do LF <-> CRLF clipboard conversion on Windows [BastyCDGS].
* Console debugger can be used also in Windows.
* Lots of fixes to restore functionality after the merge.
* Updated emulation core from WinUAE 4210 (big merge).

Version 2.9.9dev:

* More deterministic creation of fs-uae.dat [bmwiedemann].
* HAM6 on AGA fix [sonnenscheinchen].

Version 2.9.8dev:

* New option whdload_quit_key to gracefully quit slaves.
* Do not alias mouse clicks when joystick_port_0_autoswitch is off.
* Added Build-Conflicts: libroar-dev to fix building on OBS.
* Added sharp-bilinear-simple.shader [rsn8887].
* New options window_hidden, window_minimized [cnvogelg].
* Removed GLee from source.
* Fixed JIT direct access on modern Linux distributions.
* Changed default sync method on Windows to swap-finish.
* Updated bezel.
* New option: frame_time (can be used to limit emulation time before vsync).
* Compatibility updates for a couple of shaders [guest.r].
* Imported updated translations from crowdin.com.

Version 2.9.7dev:

* Support building with latest version of MSYS2.
* Renamed option frame to bezel.
* New option: force_aspect.
* Added shaders compiled/ported/written by guest.r.

Version 2.9.6dev:

* Changed default fade in/out duration, only fade in fullscreen.
* FS-UAE default is now to show a 692x540 image, not stretched to fill screen.
* Use scale = legacy to revert to old default behavior (Can put in Host.fs-uae
  or use FS-UAE Launcher set set globally).
* New option scale (choose between full, integer, legacy and no scaling).
* New option stretch (replaces keep_aspect, though it still works).
* F11 is now a dedicated toggle auto zoom function, Alt/Cmd+Z cycles through
  zoom modes as before.
* Render a frame around the view when not stretched (frame = 0 to disable).
* Cartridge freeze shortcut is now Alt/Cmd+C.
* Alt/Cmd+A now toggles stretch mode (aspect correction).
* Imported updated translations from crowdin.com.
