@@ -1,5 +1,7 @@
 Version 3.1.0dev:
 
+* New shortcut Mod+F9 to toggle between chipset and RTG display.
+* Bridgeboard & VGA available and works with custom uae_* options.
 * Fixed mouse integration.
 * Only do LF <-> CRLF clipboard conversion on Windows [BastyCDGS].
 * Console debugger can be used also in Windows.
